<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    style="@style/Background">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/homeTile"
        style="@style/Title"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/homeSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Text"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/homeSubtitle"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rvDepartments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDepartments"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@id/homeSecondTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeSubtitle" />

    <TextView
        android:id="@+id/homeSecondTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/homeSecondTitle"
        style="@style/Title"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/homeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvDepartments" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/Text"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/homeText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeSecondTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>